# farm

./: .env  .env.example  .py  Dockerfile  alembic.ini  dev.db  dev_test.db  docker-compose.yml  med.db  package-lock.json  pron.bat  pyproject.toml  readme  requirements.txt  run.bat  verify_endpoints.py
alembic/: env.py  script.py.mako
alembic/versions/: 202511271145_add_domain_models.py  24b0ecd7a43b_description_of_your_changes.py
app/: __init__.py  db.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  branches.py  drugs.py  inventory.py  orders.py  pharmacies.py
app/core/: __init__.py  cache.py  config.py  security.py
app/models/: __init__.py  audit_log.py  base.py  branch.py  drug.py  drug_variant.py  inventory.py  mixins.py  orders.py  pharmacy.py  pharmacy_request.py  user.py
app/orders/: __init__.py
app/repositories/: __init__.py  base.py  branch.py  drug.py  drug_variant.py  inventory.py  orders.py  pharmacy.py  user.py
app/schemas/: __init__.py  audit_log.py  auth.py  branch.py  drug.py  drug_variant.py  inventory.py  orders.py  pharmacy.py  pharmacy_request.py  user.py
app/services/: __init__.py  auth_service.py  branch_service.py  drug_service.py  drug_variant_service.py  inventory_service.py  orders.py  pharmacy_service.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CustomMap.jsx  Layout.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Branches.jsx  (+8 more)
(+6 files in other folders)
