[tool.poetry]
name = "med"
version = "0.1.0"
description = "Base FastAPI service scaffold with PostgreSQL, Redis, SQLAlchemy, and Alembic."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
redis = "^5.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


